// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azureactivedirectory process records from all streams - geocoded 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__azureactivedirectory__groups\\\\\\":1,\\\\\\"mytestsource__azureactivedirectory__users\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 11 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":1,\\\\\\"geo_Coordinates\\\\\\":1,\\\\\\"geo_Location\\\\\\":1,\\\\\\"identity_Identity\\\\\\":2,\\\\\\"org_Department\\\\\\":1,\\\\\\"org_Employee\\\\\\":2,\\\\\\"org_Team\\\\\\":1,\\\\\\"org_TeamMembership\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`azureactivedirectory process records from all streams - geocoded 2`] = `
Array [
  Object {
    "identity_Identity": Object {
      "emails": Array [
        null,
      ],
      "fullName": "huong tester",
      "lastName": "tester",
      "primaryEmail": null,
      "source": "AzureActiveDirectory",
      "uid": "441362ab-404d-437e-ad65-619df92a5515",
    },
  },
  Object {
    "org_Employee": Object {
      "department": null,
      "identity": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "joinedAt": "2019-03-12T02:15:42.000Z",
      "level": 0,
      "location": null,
      "manager": null,
      "source": "AzureActiveDirectory",
      "title": "huong tester",
      "uid": "441362ab-404d-437e-ad65-619df92a5515",
    },
  },
  Object {
    "org_Department": Object {
      "name": "Software Department",
      "source": "AzureActiveDirectory",
      "uid": "Software Department",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "yenhh8@gmail.com",
      ],
      "fullName": "hoang hai",
      "lastName": "hai",
      "primaryEmail": "yenhh8@gmail.com",
      "source": "AzureActiveDirectory",
      "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
    },
  },
  Object {
    "org_Employee": Object {
      "department": Object {
        "uid": "Software Department",
      },
      "identity": Object {
        "source": "AzureActiveDirectory",
        "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
      },
      "joinedAt": "2022-01-29T22:31:03.000Z",
      "level": 0,
      "location": Object {
        "uid": "32 dai tu, ha noi",
      },
      "manager": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "source": "AzureActiveDirectory",
      "title": "yen",
      "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
    },
  },
  Object {
    "org_Team": Object {
      "description": "tester team",
      "lead": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "name": "tester team",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "AzureActiveDirectory",
      "teamChain": Array [
        "all_teams",
      ],
      "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "source": "AzureActiveDirectory",
      "team": Object {
        "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
      },
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
      },
      "source": "AzureActiveDirectory",
      "team": Object {
        "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
      },
    },
  },
  Object {
    "geo_Address": Object {
      "city": "Hoàng Mai",
      "country": "Vietnam",
      "countryCode": "VN",
      "fullAddress": "32 P. Đại Từ, Đại Kim, Hoàng Mai, Hà Nội, Vietnam",
      "houseNumber": "32",
      "postalCode": null,
      "source": "AzureActiveDirectory",
      "state": "Hà Nội",
      "stateCode": "Hà Nội",
      "street": "Phố Đại Từ",
      "uid": "ChIJR5Y1ZV2sNTERqsubxtBiOJ8",
      "unit": null,
    },
  },
  Object {
    "geo_Coordinates": Object {
      "lat": 20.9847782,
      "lon": 105.8385857,
      "source": "AzureActiveDirectory",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "ChIJR5Y1ZV2sNTERqsubxtBiOJ8",
      },
      "coordinates": Object {
        "lat": 20.9847782,
        "lon": 105.8385857,
        "source": "AzureActiveDirectory",
      },
      "raw": "32 dai tu, ha noi",
      "source": "AzureActiveDirectory",
      "uid": "32 dai tu, ha noi",
    },
  },
]
`;

exports[`azureactivedirectory process records from all streams 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__azureactivedirectory__groups\\\\\\":1,\\\\\\"mytestsource__azureactivedirectory__users\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 10 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":1,\\\\\\"geo_Location\\\\\\":1,\\\\\\"identity_Identity\\\\\\":2,\\\\\\"org_Department\\\\\\":1,\\\\\\"org_Employee\\\\\\":2,\\\\\\"org_Team\\\\\\":1,\\\\\\"org_TeamMembership\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`azureactivedirectory process records from all streams 2`] = `
Array [
  Object {
    "identity_Identity": Object {
      "emails": Array [
        null,
      ],
      "fullName": "huong tester",
      "lastName": "tester",
      "primaryEmail": null,
      "source": "AzureActiveDirectory",
      "uid": "441362ab-404d-437e-ad65-619df92a5515",
    },
  },
  Object {
    "org_Employee": Object {
      "department": null,
      "identity": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "joinedAt": "2019-03-12T02:15:42.000Z",
      "level": 0,
      "location": null,
      "manager": null,
      "source": "AzureActiveDirectory",
      "title": "huong tester",
      "uid": "441362ab-404d-437e-ad65-619df92a5515",
    },
  },
  Object {
    "org_Department": Object {
      "name": "Software Department",
      "source": "AzureActiveDirectory",
      "uid": "Software Department",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "yenhh8@gmail.com",
      ],
      "fullName": "hoang hai",
      "lastName": "hai",
      "primaryEmail": "yenhh8@gmail.com",
      "source": "AzureActiveDirectory",
      "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
    },
  },
  Object {
    "org_Employee": Object {
      "department": Object {
        "uid": "Software Department",
      },
      "identity": Object {
        "source": "AzureActiveDirectory",
        "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
      },
      "joinedAt": "2022-01-29T22:31:03.000Z",
      "level": 0,
      "location": Object {
        "uid": "32 dai tu",
      },
      "manager": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "source": "AzureActiveDirectory",
      "title": "yen",
      "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
    },
  },
  Object {
    "org_Team": Object {
      "description": "tester team",
      "lead": Object {
        "source": "AzureActiveDirectory",
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "name": "tester team",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "AzureActiveDirectory",
      "teamChain": Array [
        "all_teams",
      ],
      "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "441362ab-404d-437e-ad65-619df92a5515",
      },
      "source": "AzureActiveDirectory",
      "team": Object {
        "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
      },
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "192f576b-6f3c-4229-bc9b-98efdbff7504",
      },
      "source": "AzureActiveDirectory",
      "team": Object {
        "uid": "ce3745e7-6338-42dc-8e51-2bd52fb17e00",
      },
    },
  },
  Object {
    "geo_Address": Object {
      "fullAddress": "32 dai tu",
      "source": "AzureActiveDirectory",
      "uid": "32 dai tu",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "32 dai tu",
      },
      "coordinates": null,
      "raw": "32 dai tu",
      "source": "AzureActiveDirectory",
      "uid": "32 dai tu",
    },
  },
]
`;
